--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,13 @@ html {font-size: 1em;}
 
 body {
   background-image: url('images/background.jpg') !important;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: 'Roboto', sans-serif !important;
   font-weight: 400;
   line-height: 1.45;
   color: #fff !important;
-  background-color: red !important;
+  background-color: white !important;
 }
 
 p {margin-bottom: 1.3em;}
@@ -31,6 +33,42 @@ h4 {font-size: 1.5em;}
 
 small, .font_small {font-size: 0.667em;}
 
-.App {
+.slogan {
+  font-size: 0.7em;
+  color: #c8c8c8;
+  margin-left: 40px;
+}
 
+.search {
+  margin: auto;
+  width: 200px;
+  right: 0;
+  position: absolute;
+  border-radius: 15px;
+  border: none;
+  outline-width: 0;
+  padding-left: 15px;
+}
+
+.app-menu {
+  margin-top: 150px;
+}
+
+.app-line {
+  width: 100%;
+  height: 10px;
+  border-bottom: 1px solid white;
+  opacity: 0.3;
+}
+
+.app-navigation a {
+  color: white;
+  text-decoration: none;
+  padding: 5px;
+  font-weight: lighter;
+}
+
+.app-navigation a:hover {
+  color: red;
+  text-decoration: none;
 }
