--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@ html {font-size: 1em;}
 body {
   background-image: url('images/background.jpg') !important;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-position: 0 0;
+  background-size:contain !important;
   font-family: 'Roboto', sans-serif !important;
   font-weight: 400;
   line-height: 1.45;
@@ -74,5 +75,6 @@ small, .font_small {font-size: 0.667em;}
 }
 
 .app-footer {
+  clear: both;
   background-color: #11151e;
 }
