--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@ html {font-size: 1em;}
 body {
   background-image: url('images/background.jpg') !important;
   background-repeat: no-repeat;
-  background-position: 0 0;
   background-size:contain !important;
   font-family: 'Roboto', sans-serif !important;
   font-weight: 400;
@@ -12,7 +11,9 @@ body {
   background-color: white !important;
 }
 
-p {margin-bottom: 1.3em;}
+p {
+  margin-bottom: 1.3em;
+}
 
 h1, h2, h3, h4 {
   margin: 1.414em 0 0.5em;
@@ -51,6 +52,10 @@ small, .font_small {font-size: 0.667em;}
   padding-left: 15px;
 }
 
+.search:focus {
+  box-shadow: 1px 1px 55px white;
+}
+
 .app-menu {
   margin-top: 150px;
 }
@@ -60,6 +65,7 @@ small, .font_small {font-size: 0.667em;}
   height: 10px;
   border-bottom: 1px solid white;
   opacity: 0.3;
+  margin-bottom: 55px;
 }
 
 .app-navigation a {
