--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -4,7 +4,10 @@
 }
 
 .home-latest img {
-  width: 100%;
+box-sizing: border-box;
+  width: 98%;
+  margin-right: 10px;
+  border: 3px solid white;
 }
 
 .home-slogan {
@@ -16,13 +19,19 @@
   margin-left: 50%;
 }
 .last-post-container {
-  height: 100px;
+  height: 300px;
 }
 
 .last-post {
   font-size: 0.6em !important;
   float: left !important;
   width: 20%;
+}
+
+.last-post:hover {
+  cursor: pointer;
+  transition: opacity 1s;
+  opacity: 0.8;
 }
 
 .last-post h1 {
