--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,8 @@ html {font-size: 1em;}
 body {
   background-image: url('images/background.jpg') !important;
   background-repeat: no-repeat;
-  background-size:contain !important;
+  background-position: left top;
+  background-size:cover !important;
   font-family: 'Roboto', sans-serif !important;
   font-weight: 400;
   line-height: 1.45;
@@ -108,11 +109,15 @@ small, .font_small {font-size: 0.667em;}
  * RWD Minor breaks
  */
  @media screen and (max-width: 400px) {
+   body {
+     background-position: center;
+   }
    .search {
       height: 44px;
       margin: 5px 0 !important;
       width: 100%;
       position: absolute;
+      border: 1px solid red;
    }
 
    .app-menu {
